--- a/app/src/main/res/layout/gas.xml
+++ b/app/src/main/res/layout/gas.xml
@@ -15,10 +15,7 @@
         android:layout_centerHorizontal="true"
         android:layout_centerVertical="true"
         android:layout_gravity="center"
-        android:layout_marginEnd="8dp"
-        android:layout_marginLeft="8dp"
-        android:layout_marginRight="8dp"
-        android:layout_marginStart="8dp"
+        android:foregroundGravity="center"
         android:paddingBottom="10dp"
         android:paddingLeft="10dp"
         android:paddingRight="10dp"
@@ -34,7 +31,6 @@
         app:gaugeStartAngle="180"
         app:gaugeStartValue="0"
         app:gaugeStrokeCap="BUTT"
-
         app:gaugeStrokeColor="#bdbdbd"
         app:gaugeStrokeWidth="20dp"
         app:gaugeSweepAngle="180"
