--- a/app/src/main/res/layout/activity_createaccount.xml
+++ b/app/src/main/res/layout/activity_createaccount.xml
@@ -1,9 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:tools="http://schemas.android.com/tools"
-    xmlns:app="http://schemas.android.com/apk/res-auto" tools:context="com.admin.gitframeapacas.SignUpActivity">
+    tools:context="com.admin.gitframeapacas.SignUpActivity">
 
 
     <ImageView
@@ -22,57 +23,58 @@
 
 
     <EditText
+        android:id="@+id/lblEmail"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:inputType="textEmailAddress"
-        android:ems="10"
-        android:id="@+id/editText2"
-        app:layout_constraintLeft_toLeftOf="parent"
-        android:hint="Email"
-        app:layout_constraintTop_toBottomOf="@+id/logo"
-        android:layout_marginStart="32dp"
-        app:layout_constraintRight_toRightOf="parent"
         android:layout_marginEnd="32dp"
-        android:layout_marginTop="56dp" />
+        android:layout_marginStart="32dp"
 
-    <EditText
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:inputType="textPassword"
+        android:layout_marginTop="32dp"
         android:ems="10"
-        android:id="@+id/editText4"
-        app:layout_constraintRight_toRightOf="@+id/editText2"
-        android:layout_marginTop="8dp"
-        app:layout_constraintTop_toBottomOf="@+id/editText2"
-        app:layout_constraintLeft_toLeftOf="@+id/editText2"
-        app:layout_constraintHorizontal_bias="0.0"
-        android:hint="Password" />
+        android:hint="Email"
+        android:inputType="textEmailAddress"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/logo" />
 
     <EditText
-        android:id="@+id/editText"
+        android:id="@+id/lblPassword"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
+        android:ems="10"
+        android:hint="Password"
+        android:inputType="textPassword"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintLeft_toLeftOf="@+id/lblEmail"
+        app:layout_constraintRight_toRightOf="@+id/lblEmail"
+        app:layout_constraintTop_toBottomOf="@+id/lblEmail" />
+
+    <EditText
+        android:id="@+id/lblPassword2"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
         android:ems="10"
         android:hint="Re-enter password"
         android:inputType="textPassword"
         app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintLeft_toLeftOf="@+id/editText4"
-        app:layout_constraintRight_toRightOf="@+id/editText4"
-        app:layout_constraintTop_toBottomOf="@+id/editText4"
-        android:layout_marginTop="8dp" />
+        app:layout_constraintLeft_toLeftOf="@+id/lblPassword"
+        app:layout_constraintRight_toRightOf="@+id/lblPassword"
+        app:layout_constraintTop_toBottomOf="@+id/lblPassword" />
 
     <EditText
-        android:id="@+id/editText3"
+        android:id="@+id/lblName"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:layout_marginTop="7dp"
         android:ems="10"
         android:hint="Name"
         android:inputType="textPersonName"
-        app:layout_constraintLeft_toLeftOf="@+id/editText"
-        app:layout_constraintRight_toRightOf="@+id/editText"
-        app:layout_constraintTop_toBottomOf="@+id/editText"
         app:layout_constraintHorizontal_bias="0.0"
-        android:layout_marginTop="8dp" />
+        app:layout_constraintLeft_toLeftOf="@+id/lblPassword2"
+        app:layout_constraintRight_toRightOf="@+id/lblPassword2"
+        app:layout_constraintTop_toBottomOf="@+id/lblPassword2" />
 
     <Button
         android:id="@+id/btnSignup"
@@ -81,9 +83,25 @@
         android:layout_marginTop="16dp"
         android:text="Create account"
         android:theme="@style/ThemeOverlay.MyDarkButton"
-        app:layout_constraintHorizontal_bias="1.0"
-        app:layout_constraintLeft_toLeftOf="@+id/editText3"
-        app:layout_constraintRight_toRightOf="@+id/editText3"
-        app:layout_constraintTop_toBottomOf="@+id/editText3" />
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintLeft_toLeftOf="@+id/lblName"
+        app:layout_constraintRight_toRightOf="@+id/lblName"
+        app:layout_constraintTop_toBottomOf="@+id/txtError" />
+
+    <TextView
+        android:id="@+id/txtError"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="9dp"
+        android:layout_marginLeft="8dp"
+        android:layout_marginRight="9dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        android:text=""
+        android:textColor="@color/md_red_800"
+        app:layout_constraintHorizontal_bias="0.45"
+        app:layout_constraintLeft_toLeftOf="@+id/lblName"
+        app:layout_constraintRight_toRightOf="@+id/lblName"
+        app:layout_constraintTop_toBottomOf="@+id/lblName" />
 
 </android.support.constraint.ConstraintLayout>
