--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -24,7 +24,7 @@
 
 
     <EditText
-        android:id="@+id/editText2"
+        android:id="@+id/lblEmail"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginEnd="32dp"
@@ -39,7 +39,7 @@
         app:layout_constraintTop_toBottomOf="@+id/logo" />
 
     <EditText
-        android:id="@+id/editText4"
+        android:id="@+id/lblPassword"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
@@ -47,9 +47,9 @@
         android:hint="Password"
         android:inputType="textPassword"
         app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintLeft_toLeftOf="@+id/editText2"
-        app:layout_constraintRight_toRightOf="@+id/editText2"
-        app:layout_constraintTop_toBottomOf="@+id/editText2" />
+        app:layout_constraintLeft_toLeftOf="@+id/lblEmail"
+        app:layout_constraintRight_toRightOf="@+id/lblEmail"
+        app:layout_constraintTop_toBottomOf="@+id/lblEmail" />
 
     <Button
         android:id="@+id/btnLogin"
@@ -60,7 +60,7 @@
         android:theme="@style/ThemeOverlay.MyDarkButton"
         app:layout_constraintBaseline_toBaselineOf="@+id/btnSignup"
         app:layout_constraintHorizontal_weight="1"
-        app:layout_constraintLeft_toLeftOf="@+id/editText4" />
+        app:layout_constraintLeft_toLeftOf="@+id/lblPassword" />
 
     <TextView
         android:id="@+id/btnReset"
@@ -94,7 +94,22 @@
         android:text="Sign up"
         android:theme="@style/ThemeOverlay.MyDarkButton"
         app:layout_constraintHorizontal_weight="1"
-        app:layout_constraintRight_toRightOf="@+id/editText4"
-        app:layout_constraintTop_toBottomOf="@+id/editText4" />
+        app:layout_constraintRight_toRightOf="@+id/lblPassword"
+        app:layout_constraintTop_toBottomOf="@+id/lblPassword" />
+
+    <TextView
+        android:id="@+id/txtSkip"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="8dp"
+        android:layout_marginLeft="8dp"
+        android:layout_marginRight="8dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="50dp"
+        android:text="SKIP"
+        android:textStyle="italic"
+        app:layout_constraintLeft_toLeftOf="@+id/btnReset"
+        app:layout_constraintRight_toRightOf="@+id/btnReset"
+        app:layout_constraintTop_toBottomOf="@+id/btnReset" />
 
 </android.support.constraint.ConstraintLayout>
