--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -106,7 +106,7 @@
         android:layout_marginRight="8dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="50dp"
-        android:text="SKIP"
+        android:text="@string/skip"
         android:textStyle="italic"
         app:layout_constraintLeft_toLeftOf="@+id/btnReset"
         app:layout_constraintRight_toRightOf="@+id/btnReset"
