--- a/app/src/main/res/layout/activity_createaccount.xml
+++ b/app/src/main/res/layout/activity_createaccount.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.admin.gitframeapacas.SignUpActivity">
+    tools:context="com.admin.gitframeapacas.Views.SignUpActivity">
 
 
     <ImageView
