--- a/app/src/main/res/layout/activity_gas.xml
+++ b/app/src/main/res/layout/activity_gas.xml
@@ -9,7 +9,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical"
-        tools:context=".GraphGasActivity">
+        tools:context=".Views.GraphGasActivity">
 
         <android.support.v7.widget.Toolbar
             android:id="@+id/toolbar"
