--- a/app/src/main/res/layout/activity_history.xml
+++ b/app/src/main/res/layout/activity_history.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:fitsSystemWindows="true"
-    tools:context=".HistoryActivity">
+    tools:context=".Views.HistoryActivity">
 
     <android.support.design.widget.AppBarLayout
         android:id="@+id/appbar"
@@ -33,9 +33,9 @@
     <ProgressBar
         android:id="@+id/processHistory"
         android:layout_width="wrap_content"
-        android:visibility="gone"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
+        android:visibility="gone"
         />
 
     <android.support.v7.widget.RecyclerView
