--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -6,7 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
 
-    tools:context="com.admin.gitframeapacas.MainActivity">
+    tools:context="com.admin.gitframeapacas.Views.LoginActivity">
 
     <ImageView
         android:id="@+id/logo"
