--- a/app/src/main/res/layout/fragment_map.xml
+++ b/app/src/main/res/layout/fragment_map.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context="com.admin.gitframeapacas.FeedMapFragment">
+    tools:context="com.admin.gitframeapacas.Fragment.FeedMapFragment">
 
 
     <com.google.android.gms.maps.MapView
