--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -107,7 +107,8 @@
         android:layout_marginStart="8dp"
         android:layout_marginTop="50dp"
         android:text="@string/skip"
-        android:textStyle="italic"
+        android:textSize="20sp"
+        android:textStyle="bold"
         app:layout_constraintLeft_toLeftOf="@+id/btnReset"
         app:layout_constraintRight_toRightOf="@+id/btnReset"
         app:layout_constraintTop_toBottomOf="@+id/btnReset" />
