--- a/app/src/main/res/layout/fragment_navigate.xml
+++ b/app/src/main/res/layout/fragment_navigate.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context="com.admin.gitframeapacas.Fragment.FeedMapFragment">
+    tools:context="com.admin.gitframeapacas.Fragment.FeedMapNavigateFragment">
 
 
     <com.google.android.gms.maps.MapView
@@ -17,5 +17,5 @@
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.501" />
+        app:layout_constraintVertical_bias="0.0" />
 </android.support.constraint.ConstraintLayout>
