--- a/app/src/main/res/layout/item_recommend.xml
+++ b/app/src/main/res/layout/item_recommend.xml
@@ -2,28 +2,29 @@
 <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:orientation="vertical">
 
     <TextView
         android:id="@+id/txt_recom"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="32dp"
         android:text="เหมาะกับการออกไปเดินเล่น"
         android:textSize="16dp"
-
         app:layout_constraintLeft_toRightOf="@+id/img_recom"
-        android:layout_marginTop="32dp"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        tools:listitem="@layout/item_recommend" />
 
     <ImageView
         android:id="@+id/img_recom"
         android:layout_width="109dp"
         android:layout_height="92dp"
-        app:srcCompat="@drawable/air_recommend_1"
-        android:layout_marginTop="16dp"
-        app:layout_constraintTop_toTopOf="parent"
         android:layout_marginStart="16dp"
-        app:layout_constraintLeft_toLeftOf="parent" />
+        android:layout_marginTop="16dp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/air_recommend_1" />
 
 </android.support.constraint.ConstraintLayout>
