--- a/app/src/main/res/menu/menu_drawer.xml
+++ b/app/src/main/res/menu/menu_drawer.xml
@@ -4,18 +4,18 @@
 
     <item android:title="การจัดการ">
         <menu>
-            <item
-                android:id="@+id/nav_history"
-                android:icon="@drawable/ic_history_black_24dp"
-                android:title="ประวัติ" />
+            <!-- <item
+                 android:id="@+id/nav_history"
+                 android:icon="@drawable/ic_history_black_24dp"
+                 android:title="ประวัติ" />-->
             <item
                 android:id="@+id/nav_notification"
                 android:icon="@drawable/ic_notifications_black_24dp"
                 android:title="การแจ้งเตือน" />
-            <item
-                android:id="@+id/nav_reward"
-                android:icon="@drawable/ic_my_location_black_24dp"
-                android:title="พื้นที่ปัจจุบัน" />
+            <!--   <item
+                   android:id="@+id/nav_reward"
+                   android:icon="@drawable/ic_my_location_black_24dp"
+                   android:title="พื้นที่ปัจจุบัน" />-->
         </menu>
     </item>
 
