--- a/app/src/main/res/layout/floating_district.xml
+++ b/app/src/main/res/layout/floating_district.xml
@@ -37,5 +37,19 @@
                 app:fabSize="mini" />
         </com.lzp.floatingactionbuttonplus.FabTagLayout>
 
+
+        <com.lzp.floatingactionbuttonplus.FabTagLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:tagText="switch">
+
+            <android.support.design.widget.FloatingActionButton
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:src="@drawable/ic_switch"
+                app:backgroundTint="@color/md_green_300"
+                app:fabSize="mini" />
+        </com.lzp.floatingactionbuttonplus.FabTagLayout>
+
     </com.lzp.floatingactionbuttonplus.FloatingActionButtonPlus>
 </RelativeLayout>
