--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -1,10 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<menu>
-    <!--  <item
-          android:id="@+id/action_search"
+<menu xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
+    <item
+        android:id="@+id/action_logout"
           android:orderInCategory="100"
-          android:title="@string/abc_search_hint"
-          app:showAsAction="always" />-->
+        android:title="ออกจากระบบ"
+        app:showAsAction="always" />
     <!--<item
         android:id="@+id/iconProfile"
         android:icon="@drawable/ic_profile"
