--- a/app/src/main/res/layout/frame_search.xml
+++ b/app/src/main/res/layout/frame_search.xml
@@ -13,12 +13,12 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         app:floatingSearch_close_search_on_keyboard_dismiss="true"
-        app:floatingSearch_leftActionMode="showHamburger"
+        app:floatingSearch_leftActionMode="noLeftAction"
         app:floatingSearch_menu="@menu/menu_main"
         app:floatingSearch_searchBarMarginLeft="5dp"
         app:floatingSearch_searchBarMarginRight="5dp"
         app:floatingSearch_searchBarMarginTop="5dp"
-        app:floatingSearch_searchHint="Search your district..."
+        app:floatingSearch_searchHint="ค้นหาแขวง..."
         app:floatingSearch_showSearchKey="false"
         app:floatingSearch_suggestionsListAnimDuration="250"
         tools:layout_editor_absoluteX="8dp"
