--- a/app/src/main/res/layout/floating_district.xml
+++ b/app/src/main/res/layout/floating_district.xml
@@ -14,7 +14,7 @@
         <com.lzp.floatingactionbuttonplus.FabTagLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            app:tagText="Tips">
+            app:tagText="คำแนะนำในการปฏิบัติตัว">
 
             <android.support.design.widget.FloatingActionButton
                 android:layout_width="wrap_content"
