--- a/app/src/main/res/layout/item_recommend_rad.xml
+++ b/app/src/main/res/layout/item_recommend_rad.xml
@@ -17,14 +17,19 @@
 
         <TextView
             android:id="@+id/txtHowRAD"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:layout_marginBottom="8dp"
+            android:layout_marginEnd="8dp"
             android:layout_marginLeft="8dp"
+            android:layout_marginRight="8dp"
             android:layout_marginStart="8dp"
-            android:layout_marginTop="50dp"
+            android:layout_marginTop="8dp"
             android:text="เหมาะกับการออกไปเดินเล่น"
             android:textSize="13sp"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintLeft_toRightOf="@+id/imgHowRAD"
+            app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
         <ImageView
